syntax = "proto3";

package PokemonGo.RocketAPI.GeneratedCode;

message EncounterResponse {
  int32 unknown1 = 1;
  int64 unknown2 = 2;
  string api_url = 3;
  Unknown6 unknown6 = 6;
  Unknown7 unknown7 = 7;
  repeated Payload payload = 100;
  string errorMessage = 101; //Should be moved to an error-proto file if error is always 101 field

  message Unknown6 {
    int32 unknown1 = 1;
    Unknown2 unknown2 = 2;

    message Unknown2 {
      bytes unknown1 = 1;
    }

  }

  message Unknown7 {
    bytes unknown71 = 1;
    int64 unknown72 = 2;
    bytes unknown73 = 3;
  }

  message Payload {
    repeated EncounterOutProto profile = 1;
	int32 unknownnumber = 2;
  
  
  message EncounterOutProto {
    WildPokemonProto Pokemon = 1;
    int32 Background = 2;
    int32 Status = 3;
    CaptureProbabilityProto CaptureProbability = 4;

	message WildPokemonProto {
    uint64 EncounterId = 1;
    int64 LastModifiedMs = 2;
    double Latitude = 3;
    double Longitude = 4;
    string SpawnPointId = 5;
    PokemonProto Pokemon = 7;
    int32 TimeTillHiddenMs = 11;
	
	}

	message PokemonProto {
    uint64 Id = 1;
    int32 PokemonId = 2;
    int32 Cp = 3;
    int32 Stamina = 4;
    int32 MaxStamina = 5;
    int32 Move1 = 6;
    int32 Move2 = 7;
    string DeployedFortId = 8;
    string OwnerName = 9;
    bool IsEgg = 10;
    double EggKmWalkedTarget = 11;
    double EggKmWalkedStart = 12;
    int32 Origin = 14;
    float HeightM = 15;
    float WeightKg = 16;
    int32 IndividualAttack = 17;
    int32 IndividualDefense = 18;
    int32 IndividualStamina = 19;
    float CpMultiplier = 20;
    int32 Pokeball = 21;
    int64 CapturedS2CellId = 22;
    int32 BattlesAttacked = 23;
    int32 BattlesDefended = 24;
    string EggIncubatorId = 25;
    int64 CreationTimeMs = 26;
    int32 NumUpgrades = 27;
    float AdditionalCpMultiplier = 28;
    bool Favorite = 29;
    string Nickname = 30;
    bool FromFort = 31;
 }
 message CaptureProbabilityProto {
    //unknown PokeballType = 1;
    //unknown CaptureProbability = 2;
    double ReticleDifficultyScale = 12;
 }
 }
 }
 }